# openvla-oft

./: .gitignore  .gitmodules  README.md  eval_all.sh  llm_server.py  pyproject.toml  train.sh
experiments/robot/: openvla_utils.py  robot_utils.py  vla_cache_utils.py
experiments/robot/libero/: run_libero_eval.py
prismatic/util/: data_utils.py
prismatic/vla/datasets/: datasets.py
prismatic/vla/datasets/rlds/: dataset.py  traj_transforms.py
prismatic/vla/datasets/rlds/oxe/: configs.py  mixtures.py  transforms.py
tinglin/: eval.sh  eval_reg.sh  train1.sh  train2.sh
transformers/src/transformers/models/llama/: modeling_llama.py
vla-scripts/: finetune.py
vla-utils/: requirements.txt
vla-utils/codetimer/: pyproject.toml
vla-utils/codetimer/src/codetimer/: __init__.py
vla-utils/vector-quantize-pytorch/vector_quantize_pytorch/: finite_scalar_quantization.py  vector_quantize_pytorch.py
vla-utils/vit-pytorch/vit_pytorch/: vit.py
vla-utils/vla-modules/: pyproject.toml
vla-utils/vla-modules/src/vla_modules/: __init__.py  transformer_utils.py  utils.py
vla-utils/vla-modules/src/vla_modules/baseline_utils/: aptube_manager.py
vla-utils/vla-modules/src/vla_modules/calflops/: flops_counter.py
